# extattr

./: .cirrus.yml  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  macros.rs
test/: linux_and_android.rs  test.rs
