[package]
name = "extattr"
description = "Extended Attributes API bindings for Rust"
version = "0.1.0"
edition = "2021"
authors = ["SteveLauC <stevelauc@outlook.com>"]
readme = "README.md"
license = "GPL-2.0-only"
repository = "https://github.com/SteveLauC/extattr"


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-linux-android",
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
  "x86_64-unknown-freebsd",
  "x86_64-unknown-netbsd",
]

[dependencies]
bitflags = "1.3.2"
errno = "0.2.8"
libc = {version = "0.2.137", default-features=false}

[dev-dependencies]
tempfile = "3.3.0"

[[test]]
name = "linux_and_android"
path = "test/linux_and_android.rs"
