[package]
name = "extattr"
description = "Extended Attributes API bindings for Rust"
version = "1.0.0"
edition = "2021"
authors = ["SteveLauC <stevelauc@outlook.com>"]
readme = "README.md"
license = "GPL-2.0-only"
repository = "https://github.com/SteveLauC/extattr"
keywords = ["xattr", "filesystem", "unix", "extended-attribute"]


[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-linux-android",
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "x86_64-unknown-freebsd",
    "x86_64-unknown-netbsd",
]

[dependencies]
bitflags = "1.3.2"
errno = "0.2.8"
libc = "0.2.138"

[dev-dependencies]
tempfile = "3.14.0"

[[test]]
name = "test"
path = "test/test.rs"
